from 1.8.3 to 1.8.4
- eliminated libruli, integrate libresolv based srv resolver

from 1.8.2 to 1.8.3
- remote message routing
- faster reg cleanup for short time interval registrations
- management of digests changed and moved to server

from 1.8.1 to 1.8.2
- lots of voip type casting fixes
- context aware stack, call, and message options complete
- removed api splint macros!

from 1.8.0 to 1.8.1
- expose stack contexts directly to plugins
- plugins can call voip api directly, no need for redirection api
- call sessions now have contexts
- invites now use contexts

from 1.7.2 to 1.8.0
- startup and shutdown multi-context aware for v4 api
- registration cycle now v4 api protocol context aware

from 1.7.1 to 1.7.2
- modernized autoconf support

from 1.7.0 to 1.7.1
- smarter support of remote routing
- srv resolver plugin for use with libruli

from 1.6.1 to 1.7.0
- reconfiguration of exosip2 support into runtime library

from 1.6.0 to 1.6.1
- improved ssl configure check

from 1.5.0 to 1.6.0
- usage of new context aware intermediary voip functions
- fixes for official exosip2 4.0

from 1.4.0 to 1.5.0
- moved switchview into standalone package

from 1.3.3 to 1.4.0
- ucommon abi 6 support

from 1.3.2 to 1.3.3
- systemd related changes; env security model now parsed in system.cpp.
- systemd related changes; OPTIONS has -b default
- systemd related changes; pidfile support

from 1.3.1 to 1.3.2
- more qt automake options for strange qt configs
- fixed systemd support - soon to add to fedora
- sipwitch hotspot --public mode option

from 1.3.0 to 1.3.1
- initial support for exosip2/osip2 4.0
- more mingw32 build support

from 1.2.5 to 1.3.0
- contact for autoconfiguring clients; can be set in cfg or computed
- systemd support lands
- mingw32 build support
- osip2 published dev headers brokenly used derived packages config.h

from 1.2.4 to 1.2.5
- various source build issues with config.h and cleanup
- fixes for cmake pkgconfig searches
- fix group and user handling logic